--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -41,9 +41,9 @@
     color: var(--text-color-gray);
     letter-spacing: 0.64px;
   }
-  .createButton {
-    font-size: 14px;
-    color: var(--text-color-gray);
-    letter-spacing: -0.6px;
-  }
+  // .createButton {
+  //   font-size: 14px;
+  //   color: var(--text-color-gray);
+  //   letter-spacing: -0.6px;
+  // }
 }
