[#115] Design: 검색 필터 ui 제거
다이어리 필터에서 날짜 선택 부분 제거
공용 체크박스 제작

--- a/components/search/search-checkbox.module.scss
+++ b/components/search/search-checkbox.module.scss
@@ -1,28 +1,28 @@
-.petLabel {
+.label {
   display: flex;
   align-items: center;
   gap: 6px;
   cursor: pointer;
 }
 
-.petImageContainer {
+.imageContainer {
   position: relative;
   width: 14px;
   height: 14px;
   border: 2px solid var(--pet-border);
   border-radius: 4px;
 
-  &:has(.petInput:checked) {
+  &:has(.input:checked) {
     border: 2px solid var(--main-color);
     background-color: var(--main-color);
   }
 }
 
-.petImage {
+.image {
   border-radius: 9999px;
 }
 
-.petInput:checked ~ .check {
+.input:checked ~ .check {
   display: block;
   position: absolute;
   top: 50%;
@@ -34,12 +34,12 @@
   display: none;
 }
 
-.petInput {
+.input {
   width: 0;
   height: 0;
 }
 
-.petName {
+.value {
   font-weight: 400;
   font-size: 12px;
 }
