--- a/components/search/search-member-filter.module.scss
+++ b/components/search/search-member-filter.module.scss
@@ -1,22 +1,45 @@
-.member {
-  background-color: var(--white);
-  width: fit-content;
-  padding: 8px;
-  border: 2px solid var(--pet-border);
-  border-radius: 9999px;
-  color: var(--pet-border);
+.label {
+  display: flex;
+  align-items: center;
+  gap: 6px;
   cursor: pointer;
-  position: relative;
+}
 
-  &.selected {
+.imageContainer {
+  position: relative;
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--pet-border);
+  border-radius: 4px;
+
+  &:has(.input:checked) {
     border: 2px solid var(--main-color);
     background-color: var(--main-color);
-    color: var(--white);
   }
 }
 
-.checkbox {
+.image {
+  border-radius: 9999px;
+}
+
+.input:checked ~ .check {
+  display: block;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.check {
+  display: none;
+}
+
+.input {
   width: 0;
   height: 0;
+}
+
+.name {
+  font-weight: 400;
+  font-size: 12px;
 }
