--- a/components/search/search-section.module.scss
+++ b/components/search/search-section.module.scss
@@ -1,13 +1,13 @@
 .section {
   display: flex;
-  flex-direction: column;
   gap: 16px;
 }
 
 .title {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+  flex-shrink: 0;
+  width: 50px;
+  font-size: 12px;
+  cursor: pointer;
 }
 
 .selectAll {
