--- a/components/search/search-form.module.scss
+++ b/components/search/search-form.module.scss
@@ -1,8 +1,7 @@
 .inner {
-  padding: 30px 24px;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
-  gap: 28px;
 }
 
 .dateContainer {
