[#65] Fix: 다이어리 이미지 id 푸쉬될 때 인덱스 수정
다이어리 생성 완료 시 페이지 이동 구현

--- a/components/diaries/diary-content/diary-content.module.scss
+++ b/components/diaries/diary-content/diary-content.module.scss
@@ -10,6 +10,7 @@
   border: 1px solid;
   box-shadow: 2px 4px 5px #dadada;
   border-color: var(--main-color);
+  cursor: pointer;
 
   .leftContainer {
     display: flex;
