--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -1,5 +1,6 @@
 .outer {
   display: flex;
+  align-items: center;
   margin-top: 15px;
   gap: 14px;
   padding: 20px;
@@ -17,6 +18,13 @@
   &:last-of-type {
     margin-bottom: 50px;
   }
+}
+
+.category {
+  border-radius: 9999px;
+  width: 50px;
+  height: 50px;
+  position: relative;
 }
 
 .todo {
