[#172] Feat: framer motion 설정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ button {
 
 #__container {
   max-width: var(--global-width);
+  overflow-x: hidden;
   width: 100%;
   min-height: 100vh;
   margin: 0 auto;
