--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -1,6 +1,6 @@
 .outer {
   display: flex;
-  margin-top: 15px;
+  // margin-top: 15px;
   gap: 14px;
   padding: 20px;
   border: 1px solid var(--main-color);
@@ -13,10 +13,9 @@
   &:hover {
     background-color: #fafafa;
   }
-
-  &:last-of-type {
-    margin-bottom: 50px;
-  }
+  // &:last-of-type {
+  //   margin-bottom: 50px;
+  // }
 }
 
 .todo {
