[#145] Feat: 다이어리, 반려동물선택 이미지 ui

--- a/styles/color.css
+++ b/styles/color.css
@@ -24,5 +24,5 @@
   --hospital-color: #9498ff;
   --abnormalSymptom-color: #f5877e;
   --snack-color: #ffb23f;
-  --skeleton-cololr: #bbbbbb;
+  --skeleton-color: #bbbbbb;
 }
