--- a/pages/calendar/[calendarId]/calendar-id.module.scss
+++ b/pages/calendar/[calendarId]/calendar-id.module.scss
@@ -17,12 +17,12 @@
   margin: 32px 0 38px;
 }
 
-.tempImg {
+.categoryImage {
   margin-top: 20px;
   height: 20px;
   width: 20px;
   border-radius: 9999px;
-  background-color: var(--main-color);
+  position: relative;
 }
 
 .headerText {
