--- a/components/story/detail/add-comment/story-detail-add-comment.module.scss
+++ b/components/story/detail/add-comment/story-detail-add-comment.module.scss
@@ -1,7 +1,19 @@
 .layout {
   position: fixed;
-  bottom: 83px;
+  bottom: 0;
   width: 380px;
+  height: 100px;
+  background-color: var(--white);
+  padding-top: 25px;
+}
+
+.reply {
+  color: var(--main-color);
+  font-size: 12px;
+  margin-bottom: 7px;
+  display: block;
+  position: absolute;
+  top: 0;
 }
 
 .form {
@@ -17,11 +29,16 @@
   resize: none;
   font-size: 16px;
   line-height: 28px;
+  outline: none;
 
   &::placeholder {
     font-size: 16px;
     color: #9e9e9e;
     line-height: 28px;
+  }
+
+  &.active {
+    border: 1px solid var(--main-color);
   }
 }
 
