[#44] Fix: 일정 등록 시 날짜/시간 입력 후 버튼 색상이 안 변하는 문제 수정

--- a/pages/calendar/[calendarId]/edit/edit.module.scss
+++ b/pages/calendar/[calendarId]/edit/edit.module.scss
@@ -127,6 +127,10 @@
   border: none;
   align-self: last baseline;
   width: fit-content;
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
 .year,
