--- a/components/mypage/profile/modal/image-upload-modal.module.scss
+++ b/components/mypage/profile/modal/image-upload-modal.module.scss
@@ -17,3 +17,18 @@
 .profile-input {
   display: none;
 }
+
+.modalCloseButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--main-color);
+  bottom: -68px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
