--- a/components/calendar-compound/components/weekly/calendar-weekly.module.scss
+++ b/components/calendar-compound/components/weekly/calendar-weekly.module.scss
@@ -11,13 +11,14 @@
   background-color: #f5f5f5;
   border-radius: 36px;
   color: #9e9e9e;
+  cursor: pointer;
 
   &.selected {
     background-color: var(--main-color);
     color: var(--white);
   }
 
-  button {
+  & > div {
     width: 100%;
     display: flex;
     flex-direction: column;
