[#145] 반려동물 선택 스켈레톤 ui

--- a/components/skeleton/image/image.module.scss
+++ b/components/skeleton/image/image.module.scss
@@ -2,6 +2,10 @@
 
 .skeletonContainer {
   display: flex;
+  gap: 15px;
+}
+.skeletonImage {
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
