--- a/components/diaries/edit/diary-edit-weather/diary-edit-weather.module.scss
+++ b/components/diaries/edit/diary-edit-weather/diary-edit-weather.module.scss
@@ -6,11 +6,13 @@
   padding-top: 30px;
   border-top: 1px solid #d5d9dc;
   margin-bottom: 30px;
+
   .label {
     padding-left: 10px;
     border-left: 2px solid var(--text-color-gray);
     font-size: 14px;
     margin-bottom: 12px;
+    color: var(--text-color-gray);
   }
 
   .weatherIcons {
