[#185] Feat: 여백 공간 퍼블리싱 및 모달 변경

--- a/components/common/modal/modal.module.scss
+++ b/components/common/modal/modal.module.scss
@@ -6,13 +6,12 @@
   font-weight: 600;
   overflow: hidden;
   padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .inner {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 312px;
   display: flex;
   flex-direction: column;
