--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -6,12 +6,11 @@
   width: 100%;
   height: 54px;
   max-width: var(--global-width);
-  left: 50%;
   top: 0;
-  transform: translateX(-50%);
   border-bottom: 1px solid var(--main-color);
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
+  border-left: 1px solid #32a753;
+  border-right: 1px solid #32a753;
+  margin-left: -1px;
   .leftIcon {
     position: absolute;
     margin: auto 0;
