--- a/components/common/nav/nav.module.scss
+++ b/components/common/nav/nav.module.scss
@@ -3,13 +3,12 @@
   display: flex;
   position: fixed;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
   overflow: hidden;
   filter: url('#goo');
   max-width: var(--global-width);
   width: 100%;
   height: 80px;
+  margin-left: -1px;
   .nav {
     margin-top: auto;
     display: flex;
@@ -20,7 +19,7 @@
     background-color: var(--white);
     box-shadow: 0 -2px 22px 0 rgba(143, 204, 147, 0.15);
     padding: 0 24px 11px;
-    border-right: 1px solid #ddd;
-    border-left: 1px solid #ddd;
+    border-right: 1px solid #32a753;
+    border-left: 1px solid #32a753;
   }
 }
