--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ button {
 html,
 body {
   overflow-y: hidden;
+  background-color: #e7fbe9;
 }
 
 #__container {
@@ -34,8 +35,8 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100vh;
-  margin: 0 auto;
-  border: 1px solid #ddd;
+  border: 1px solid #32a753;
+  background-color: var(--white);
   border-top: none;
   border-bottom: none;
   position: relative;
