--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -7,10 +7,14 @@
   height: 54px;
   max-width: var(--global-width);
   top: 0;
-  border-bottom: 1px solid var(--main-color);
-  border-left: 1px solid #32a753;
-  border-right: 1px solid #32a753;
+  border-bottom: 2px solid #f6f6f6;
+  border-left: 1px solid var(--container-border);
+  border-right: 1px solid var(--container-border);
   margin-left: -1px;
+  @media screen and (max-width: 430px) {
+    border-left: none;
+    border-right: none;
+  }
   .leftIcon {
     position: absolute;
     margin: auto 0;
