--- a/components/common/add-button/add-button.module.scss
+++ b/components/common/add-button/add-button.module.scss
@@ -10,4 +10,10 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  @media screen and (max-width: 1257px) {
+    right: calc(50% - var(--global-width) + 235px);
+  }
+  @media screen and (max-width: 430px) {
+    right: 20px;
+  }
 }
