--- a/components/story/item/story-item-info.module.scss
+++ b/components/story/item/story-item-info.module.scss
@@ -3,6 +3,7 @@
   gap: 0 8px;
   color: #9e9e9e;
   font-size: 12px;
+  margin-top: 5px;
 }
 
 .info-description {
@@ -16,6 +17,7 @@
   font-size: 14px;
   color: #9e9e9e;
   gap: 0 18px;
+  margin-top: 5px;
 }
 
 .info-feature {
