--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,11 +35,14 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100vh;
-  border: 1px solid #32a753;
+  border: 1px solid var(--container-border);
   background-color: var(--white);
   border-top: none;
   border-bottom: none;
   position: relative;
   overflow-y: scroll;
   scrollbar-width: none;
+  @media screen and (max-width: 430px) {
+    border: none;
+  }
 }
