--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -9,6 +9,7 @@
   position: relative;
   color: var(--text-color);
   cursor: pointer;
+  margin-bottom: 12px;
 
   &:hover {
     background-color: #fafafa;
