--- a/components/common/nav/nav.module.scss
+++ b/components/common/nav/nav.module.scss
@@ -12,7 +12,8 @@
   .nav {
     margin-top: auto;
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-end;
     width: 100%;
     height: 63px;
